# sec-form4-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: top_cfo_purchases.py
src/sec_form4_parser/: __init__.py  cli.py  client.py  models.py  parser.py
tests/: test_parser.py
tests/fixtures/: sample_form4_multi_reporter.xml  sample_form4_purchase.xml
